fillna on probability scores if present

--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 122,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 123,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 124,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 125,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 126,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 127,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 128,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 129,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 130,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 131,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 132,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 133,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 134,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -742,7 +742,7 @@
     "        \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 5,\n",
+    "        \"early_stopping_patience\": 10,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
     "    \"layers\": [\"128-64-32\", \"128-64-32-16\", \"256-128-64\"],\n",
@@ -767,7 +767,7 @@
     "        \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 5,\n",
+    "        \"early_stopping_patience\": 8,\n",
     "        \"precision\": 16,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 135,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 136,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -885,7 +885,7 @@
     "        \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 5,\n",
+    "        \"early_stopping_patience\": 10,\n",
     "    },\n",
     "    \"batch_size\": [32, 64, 128, 256],\n",
     "    # \"attn_embed_dim\": [32, 16, 64],\n",
@@ -926,7 +926,7 @@
     "        \"precision\": 16,\n",
     "        \"max_epochs\": 1000,\n",
     "        \"val_size\": 0.15,\n",
-    "        \"early_stopping_patience\": 5,\n",
+    "        \"early_stopping_patience\": 8,\n",
     "    },\n",
     "    \"batch_size\": [1024, 2048, 4096],\n",
     "    # \"attn_embed_dim\": [32, 16, 64],\n",
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 137,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 138,
    "id": "eecd456e-f059-4d77-b60e-0957ce619032",
    "metadata": {},
    "outputs": [],
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 139,
    "id": "ff3a5012-7f66-47f7-b8de-b400a1cbb75e",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "    'validation_fraction': 0.15,\n",
        "    'early_stopping_rounds': 50,\n",
        "    'verbose': False},\n",
-       "   'n_estimators': [100, 2000],\n",
+       "   'n_estimators': [100, 3000],\n",
        "   'max_bin': [256, 32],\n",
        "   'tree_method': ['auto', 'hist'],\n",
        "   'max_depth': [4, 10],\n",
@@ -1433,7 +1433,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'layers': ['128-64-32', '128-64-32-16', '256-128-64'],\n",
        "   'activation': ['ReLU', 'LeakyReLU', 'Tanh'],\n",
@@ -1494,7 +1494,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'attn_embed_dim_multiplier': [2, 16],\n",
        "   'num_heads': [2, 8],\n",
@@ -1562,7 +1562,7 @@
        "    'validation_fraction': 0.15,\n",
        "    'early_stopping_rounds': 50,\n",
        "    'verbose': False},\n",
-       "   'n_estimators': [100, 2000],\n",
+       "   'n_estimators': [100, 3000],\n",
        "   'max_bin': [256, 32],\n",
        "   'tree_method': ['auto', 'hist'],\n",
        "   'max_depth': [4, 10],\n",
@@ -1708,7 +1708,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'layers': ['128-64-32', '128-64-32-16', '256-128-64'],\n",
        "   'activation': ['ReLU', 'LeakyReLU', 'Tanh'],\n",
@@ -1769,7 +1769,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'attn_embed_dim_multiplier': [2, 16],\n",
        "   'num_heads': [2, 8],\n",
@@ -1837,7 +1837,7 @@
        "    'validation_fraction': 0.15,\n",
        "    'early_stopping_rounds': 50,\n",
        "    'verbose': False},\n",
-       "   'n_estimators': [100, 1500],\n",
+       "   'n_estimators': [100, 2000],\n",
        "   'max_bin': [256, 32],\n",
        "   'tree_method': ['auto', 'hist'],\n",
        "   'max_depth': [4, 10],\n",
@@ -1983,7 +1983,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'layers': ['128-64-32', '128-64-32-16', '256-128-64'],\n",
        "   'activation': ['ReLU', 'LeakyReLU', 'Tanh'],\n",
@@ -2044,7 +2044,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'attn_embed_dim_multiplier': [2, 16],\n",
        "   'num_heads': [2, 8],\n",
@@ -2112,7 +2112,7 @@
        "    'validation_fraction': 0.15,\n",
        "    'early_stopping_rounds': 50,\n",
        "    'verbose': False},\n",
-       "   'n_estimators': [100, 2000],\n",
+       "   'n_estimators': [100, 3000],\n",
        "   'max_bin': [256, 32],\n",
        "   'tree_method': ['auto', 'hist'],\n",
        "   'max_depth': [4, 10],\n",
@@ -2258,7 +2258,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'layers': ['128-64-32', '128-64-32-16', '256-128-64'],\n",
        "   'activation': ['ReLU', 'LeakyReLU', 'Tanh'],\n",
@@ -2319,7 +2319,7 @@
        "    'precision': 16,\n",
        "    'max_epochs': 1000,\n",
        "    'val_size': 0.15,\n",
-       "    'early_stopping_patience': 5},\n",
+       "    'early_stopping_patience': 10},\n",
        "   'batch_size': [32, 64, 128, 256],\n",
        "   'attn_embed_dim_multiplier': [2, 16],\n",
        "   'num_heads': [2, 8],\n",
@@ -2382,7 +2382,7 @@
        "   'bagging_temperature': [0.1, 2.0]}}]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 140,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 141,
    "id": "7d99f65e-7b01-4c44-9116-e26c525ee79d",
    "metadata": {},
    "outputs": [],
@@ -2432,7 +2432,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 142,
+   "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('titanic', 'gate'),\n",
+       " ('breastcancer', 'gate'),\n",
+       " ('ageconditions', 'gate'),\n",
+       " ('diabetes', 'gate'),\n",
+       " ('adult', 'gate'),\n",
+       " ('housing', 'gate'),\n",
+       " ('creditcard', 'gate'),\n",
+       " ('heloc', 'gate'),\n",
+       " ('covertype', 'gate')]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in total_missing_combos if \"gate\" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "b336f527-dd1d-4e76-ad37-92c763320af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('iris', 'autoint'),\n",
+       " ('ageconditions', 'autoint'),\n",
+       " ('adult', 'autoint'),\n",
+       " ('housing', 'autoint'),\n",
+       " ('creditcard', 'autoint'),\n",
+       " ('heloc', 'autoint'),\n",
+       " ('covertype', 'autoint')]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in total_missing_combos if \"autoint\" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "b64dd5b7-d9a4-4e93-b033-f19ebdec7624",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('adult', 'categoryembedding'),\n",
+       " ('creditcard', 'categoryembedding'),\n",
+       " ('covertype', 'categoryembedding')]"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in total_missing_combos if \"categoryembedding\" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
@@ -2441,27 +2520,29 @@
     "    generate_model_template(\n",
     "        \"iris\", \"autoint\", param_grid=autoint_small_param_grid.copy()\n",
     "    ),\n",
+    "   #generate_model_template(\n",
+    "   #    \"titanic\", \"autoint\", param_grid=autoint_small_param_grid.copy()\n",
+    "   #),\n",
+    "   #generate_model_template(\n",
+    "   #    \"breastcancer\", \"autoint\", param_grid=autoint_small_param_grid.copy()\n",
+    "   #),\n",
+    "    #generate_model_template(\n",
+    "   #    \"diabetes\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
+    "   #),\n",
     "    generate_model_template(\n",
-    "        \"titanic\", \"autoint\", param_grid=autoint_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"breastcancer\", \"autoint\", param_grid=autoint_small_param_grid.copy()\n",
+    "        \"creditcard\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
     "        \"ageconditions\", \"autoint\", param_grid=autoint_small_param_grid.copy()\n",
     "    ),\n",
-    "    generate_model_template(\n",
-    "        \"diabetes\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
-    "    ),\n",
+    "    \n",
     "    generate_model_template(\n",
     "        \"adult\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
     "    ),\n",
     "    generate_model_template(\n",
     "        \"housing\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
     "    ),\n",
-    "    generate_model_template(\n",
-    "        \"creditcard\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
-    "    ),\n",
+    "    \n",
     "    generate_model_template(\n",
     "        \"heloc\", \"autoint\", param_grid=autoint_large_param_grid.copy()\n",
     "    ),\n",
@@ -2471,15 +2552,21 @@
     "]\n",
     "\n",
     "templates2 = [\n",
-    "    generate_model_template(\n",
-    "        \"iris\", \"categoryembedding\", param_grid=catembed_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"titanic\", \"categoryembedding\", param_grid=catembed_small_param_grid.copy()\n",
-    "    ),\n",
-    "    generate_model_template(\n",
-    "        \"breastcancer\", \"categoryembedding\", param_grid=catembed_small_param_grid.copy()\n",
-    "    ),\n",
+    "   #generate_model_template(\n",
+    "   #    \"iris\", \"categoryembedding\", param_grid=catembed_small_param_grid.copy()\n",
+    "   #),\n",
+    "   #generate_model_template(\n",
+    "   #    \"titanic\", \"categoryembedding\", param_grid=catembed_small_param_grid.copy()\n",
+    "   #),\n",
+    "   # generate_model_template(\n",
+    "   #     \"breastcancer\", \"categoryembedding\", param_grid=catembed_small_param_grid.copy()\n",
+    "   # ),\n",
+    "    #generate_model_template(\n",
+    "    #    \"heloc\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
+    "    #),\n",
+    "    #generate_model_template(\n",
+    "    #    \"housing\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
+    "    #),\n",
     "    generate_model_template(\n",
     "        \"ageconditions\",\n",
     "        \"categoryembedding\",\n",
@@ -2491,15 +2578,11 @@
     "    generate_model_template(\n",
     "        \"adult\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
     "    ),\n",
-    "    generate_model_template(\n",
-    "        \"housing\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
-    "    ),\n",
+    "    \n",
     "    generate_model_template(\n",
     "        \"creditcard\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
     "    ),\n",
-    "    generate_model_template(\n",
-    "        \"heloc\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
-    "    ),\n",
+    "    \n",
     "    generate_model_template(\n",
     "        \"covertype\", \"categoryembedding\", param_grid=catembed_large_param_grid.copy()\n",
     "    ),\n",
@@ -2514,10 +2597,11 @@
     "    generate_model_template(\n",
     "        \"ageconditions\", \"gate\", param_grid=gate_small_param_grid.copy()\n",
     "    ),\n",
+    "    generate_model_template(\"adult\", \"gate\", param_grid=gate_large_param_grid.copy()),\n",
     "    generate_model_template(\n",
     "        \"diabetes\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
     "    ),\n",
-    "    generate_model_template(\"adult\", \"gate\", param_grid=gate_large_param_grid.copy()),\n",
+    "    \n",
     "    generate_model_template(\"housing\", \"gate\", param_grid=gate_large_param_grid.copy()),\n",
     "    generate_model_template(\n",
     "        \"creditcard\", \"gate\", param_grid=gate_large_param_grid.copy()\n",
@@ -2531,21 +2615,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 146,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "random.shuffle(templates1)\n",
+    "#random.shuffle(templates1)\n",
     "random.shuffle(templates2)\n",
-    "random.shuffle(templates3)"
+    "#random.shuffle(templates3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 147,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -2557,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 148,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -2569,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 149,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -2581,7 +2665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 150,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
