rogue batch size fix attempt s1dcnn + resnet

--- a/notebooks/tests/DatasetsExploration.ipynb
+++ b/notebooks/tests/DatasetsExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "id": "61d7a5af",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "20e62614-7e6b-40dd-8f57-b6e5438f0775",
+   "execution_count": null,
+   "id": "caff8754-4b55-40f4-a311-8bf2e4b9cf04",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"/Users/mdicio/Documents/GitHub/WTabRun/data/diabetes/diabetic_data.csv\")"
+    "for fold, (train_idx, val_idx) in enumerate(kf.split(X, y)):"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "925ed8c0-d17a-4d3e-a054-bad3f47feb0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebdb133a-d991-44bc-8de9-453d5816eee4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c959cd3-b597-4938-8e51-8c75110bee33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -714,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ac538c6a-000f-4654-8ef6-4db8f48a6e13",
    "metadata": {},
    "outputs": [],
@@ -756,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "88915d03-4f42-47a9-8b8b-c3a188862277",
    "metadata": {},
    "outputs": [],
@@ -767,11 +791,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "da182eb8-3e21-48cf-bdbb-32022ee6c751",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8367,)\n",
+      "(8367,)\n",
+      "(8367,)\n",
+      "(8367,)\n",
+      "(8368,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "for fold, (train_idx, val_idx) in enumerate(kf.split(X, y)):\n",
+    "    print(train_idx.shape)"
+   ]
   },
   {
    "cell_type": "code",
