--- a/notebooks/Add_run_elements_specific.ipynb
+++ b/notebooks/Add_run_elements_specific.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 49,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 50,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 51,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 52,
    "id": "cee0801e-1da0-498f-a3ec-2f8c69518bb0",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 53,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 54,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 55,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 56,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 57,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 58,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 59,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 60,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 61,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 62,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 63,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 64,
    "id": "9c75b306-d201-4889-a613-c885a3463ae4",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 65,
    "id": "32d03d4b-ce74-4e04-9f50-42341eefb328",
    "metadata": {},
    "outputs": [],
@@ -1136,227 +1136,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "7d99f65e-7b01-4c44-9116-e26c525ee79d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_do_now_combos = [tuple([i[\"dataset\"], i[\"model\"]]) for i in initial_queue]\n",
-    "to_do_now_combos = [i for i in to_do_now_combos if i not in existing_combinations]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 74,
    "id": "24781a9a-0cae-418f-8e09-3cd6f616fa88",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('breastcancer', 'gate'),\n",
-       " ('ageconditions', 'gate'),\n",
-       " ('diabetes', 'gate'),\n",
-       " ('adult', 'gate'),\n",
-       " ('housing', 'gate'),\n",
-       " ('creditcard', 'gate'),\n",
-       " ('heloc', 'gate'),\n",
-       " ('covertype', 'gate')]"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### XGB ###\n",
+      "('covertype', 'xgb')\n",
+      "### CATBOOST ###\n",
+      "('iris', 'catboost')\n",
+      "('titanic', 'catboost')\n",
+      "('breastcancer', 'catboost')\n",
+      "('ageconditions', 'catboost')\n",
+      "('diabetes', 'catboost')\n",
+      "('adult', 'catboost')\n",
+      "('housing', 'catboost')\n",
+      "('creditcard', 'catboost')\n",
+      "('heloc', 'catboost')\n",
+      "('covertype', 'catboost')\n",
+      "### MLP ###\n",
+      "('diabetes', 'mlp')\n",
+      "('adult', 'mlp')\n",
+      "('housing', 'mlp')\n",
+      "('creditcard', 'mlp')\n",
+      "('heloc', 'mlp')\n",
+      "('covertype', 'mlp')\n",
+      "### TABNET ###\n",
+      "('breastcancer', 'tabnet')\n",
+      "('ageconditions', 'tabnet')\n",
+      "('diabetes', 'tabnet')\n",
+      "('adult', 'tabnet')\n",
+      "('housing', 'tabnet')\n",
+      "('creditcard', 'tabnet')\n",
+      "('heloc', 'tabnet')\n",
+      "('covertype', 'tabnet')\n",
+      "### GATE ###\n",
+      "('ageconditions', 'gate')\n",
+      "('diabetes', 'gate')\n",
+      "('adult', 'gate')\n",
+      "('housing', 'gate')\n",
+      "('creditcard', 'gate')\n",
+      "('heloc', 'gate')\n",
+      "('covertype', 'gate')\n",
+      "### RESNET ###\n",
+      "('iris', 'resnet')\n",
+      "('titanic', 'resnet')\n",
+      "('breastcancer', 'resnet')\n",
+      "('ageconditions', 'resnet')\n",
+      "('diabetes', 'resnet')\n",
+      "('adult', 'resnet')\n",
+      "('housing', 'resnet')\n",
+      "('creditcard', 'resnet')\n",
+      "('heloc', 'resnet')\n",
+      "('covertype', 'resnet')\n",
+      "### S1DCNN ###\n",
+      "('diabetes', 's1dcnn')\n",
+      "('adult', 's1dcnn')\n",
+      "('housing', 's1dcnn')\n",
+      "('creditcard', 's1dcnn')\n",
+      "('heloc', 's1dcnn')\n",
+      "('covertype', 's1dcnn')\n",
+      "### CATEGORYEMBEDDING ###\n",
+      "('adult', 'categoryembedding')\n",
+      "('covertype', 'categoryembedding')\n",
+      "### FTTRANSFORMER ###\n",
+      "('diabetes', 'fttransformer')\n",
+      "('adult', 'fttransformer')\n",
+      "('housing', 'fttransformer')\n",
+      "('creditcard', 'fttransformer')\n",
+      "('heloc', 'fttransformer')\n",
+      "('covertype', 'fttransformer')\n",
+      "### TABTRANSFORMER ###\n",
+      "('diabetes', 'tabtransformer')\n",
+      "('adult', 'tabtransformer')\n",
+      "('housing', 'tabtransformer')\n",
+      "('creditcard', 'tabtransformer')\n",
+      "('heloc', 'tabtransformer')\n",
+      "('covertype', 'tabtransformer')\n",
+      "### GANDALF ###\n",
+      "('diabetes', 'gandalf')\n",
+      "('adult', 'gandalf')\n",
+      "('housing', 'gandalf')\n",
+      "('creditcard', 'gandalf')\n",
+      "('heloc', 'gandalf')\n",
+      "('covertype', 'gandalf')\n",
+      "### AUTOINT ###\n",
+      "('ageconditions', 'autoint')\n",
+      "('adult', 'autoint')\n",
+      "('housing', 'autoint')\n",
+      "('creditcard', 'autoint')\n",
+      "('heloc', 'autoint')\n",
+      "('covertype', 'autoint')\n",
+      "### NODE ###\n",
+      "('creditcard', 'node')\n",
+      "('covertype', 'node')\n"
+     ]
     }
    ],
    "source": [
-    "[i for i in total_missing_combos if \"gate\" in i]"
+    "for mod in included_models:\n",
+    "    print(f\"### {mod.upper()} ###\")\n",
+    "    matching_combos = [i for i in total_missing_combos if mod in i]\n",
+    "    for combo in matching_combos:\n",
+    "        print(combo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "b336f527-dd1d-4e76-ad37-92c763320af3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('diabetes', 'tabtransformer'),\n",
-       " ('adult', 'tabtransformer'),\n",
-       " ('housing', 'tabtransformer'),\n",
-       " ('creditcard', 'tabtransformer'),\n",
-       " ('heloc', 'tabtransformer'),\n",
-       " ('covertype', 'tabtransformer')]"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i for i in total_missing_combos if \"tabtransformer\" in i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "b64dd5b7-d9a4-4e93-b033-f19ebdec7624",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('diabetes', 'gandalf'),\n",
-       " ('adult', 'gandalf'),\n",
-       " ('housing', 'gandalf'),\n",
-       " ('creditcard', 'gandalf'),\n",
-       " ('heloc', 'gandalf'),\n",
-       " ('covertype', 'gandalf')]"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i for i in total_missing_combos if \"gandalf\" in i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 67,
    "id": "1e993276-4526-489d-a292-38f0a995e281",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates1 = [\n",
-    "\n",
-    "\n",
-    "generate_model_template(\n",
-    "    \"titanic\", \"s1dcnn\", param_grid=s1dcnn_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"s1dcnn\", param_grid=s1dcnn_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"s1dcnn\", param_grid=s1dcnn_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"tabnet\", param_grid=tabnet_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"tabnet\", param_grid=tabnet_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "\n",
-    "generate_model_template(\n",
-    "\"iris\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"titanic\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"resnet\", param_grid=resnet_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "generate_model_template(\n",
-    "\"iris\", \"tabtransformer\", param_grid=tabtransformer_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"titanic\", \"tabtransformer\", param_grid=tabtransformer_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"tabtransformer\", param_grid=tabtransformer_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"tabtransformer\", param_grid=tabtransformer_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "\n",
+    "generate_model_template(\"creditcard\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "generate_model_template(\"creditcard\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "]\n",
     "\n",
     "templates2 = [\n",
-    "\n",
-    "generate_model_template(\n",
-    "\"iris\", \"fttransformer\", param_grid=fttransformer_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"titanic\", \"fttransformer\", param_grid=fttransformer_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"fttransformer\", param_grid=fttransformer_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"fttransformer\", param_grid=fttransformer_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "generate_model_template(\n",
-    "\"iris\", \"gandalf\", param_grid=gandalf_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"titanic\", \"gandalf\", param_grid=gandalf_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"gandalf\", param_grid=gandalf_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"gandalf\", param_grid=gandalf_small_param_grid.copy()\n",
-    "),\n",
-    "\n",
-    "\n",
+    "generate_model_template(\"creditcard\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "generate_model_template(\"creditcard\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "]\n",
     "\n",
     "templates3 = [\n",
-    "\n",
-    "generate_model_template(\n",
-    "\"iris\", \"catboost\", param_grid=catboost_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"titanic\", \"catboost\", param_grid=catboost_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"breastcancer\", \"catboost\", param_grid=catboost_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"ageconditions\", \"catboost\", param_grid=catboost_small_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"diabetes\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"adult\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"housing\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"creditcard\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "\"heloc\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "generate_model_template(\n",
-    "    \"covertype\", \"catboost\", param_grid=catboost_large_param_grid.copy()\n",
-    "),\n",
-    "\n",
+    "generate_model_template(\"creditcard\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"creditcard\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "]\n",
     "\n",
+    "templates4 = [\n",
+    "generate_model_template(\"iris\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"titanic\",\"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "generate_model_template(\"creditcard\",\"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
     "\n",
+    "\n",
+    "generate_model_template(\"diabetes\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
+    "generate_model_template(\"housing\",\"tabnet\", param_grid = tabnet_large_param_grid.copy()),\n",
+    "]\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 68,
    "id": "9e34d761-8131-464c-85f6-084411d2aaa3",
    "metadata": {},
    "outputs": [],
@@ -1370,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 69,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 70,
    "id": "6f1fdf1e-2497-41fc-ba38-969478bb053b",
    "metadata": {},
    "outputs": [],
@@ -1394,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 71,
    "id": "27327b29-18f5-444e-b15d-e26ab72036cb",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1340,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 72,
+   "id": "9c71f249-a547-4d37-916b-e4c7e3697185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write the dictionary to a YAML file\n",
+    "with open(\"../configuration/experiment_runs3.yml\", \"w\") as f:\n",
+    "    yaml.dump(templates3, f, sort_keys=False, default_flow_style=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "9ee7bcaf-81ca-450e-8a57-de6deaf74d36",
    "metadata": {},
    "outputs": [
